package com.example.retailwebsite.enums;

public enum ProductType {
    CLOTHING,
    ELECTRONICS,
    FURNITURE,
    GROCERIES,
    HEALTH_AND_BEAUTY,
    BABY_PRODUCTS;
}
