package com.example.retailwebsite.enums;


public enum UserType {
    EMPLOYEE,
    AFFILIATE,
    CUSTOMER
}

