@startuml

' Define the Discount interface
interface Discount {
    +calculateDiscount(bill: Bill): double
}

' Define the PercentageDiscount class
class PercentageDiscount {
    -percentage: double
    +calculateDiscount(bill: Bill): double
}

' Define the AmountBasedDiscount class
class AmountBasedDiscount {
    +calculateDiscount(bill: Bill): double
}

' Define the BillCalculator class
class BillCalculator {
    -percentageDiscount: Discount
    -amountBasedDiscount: Discount
    +calculateNetPayableAmount(bill: Bill, user: User): double
}

' Define the Bill class
class Bill {
    -billId: String
    -products: List<Product>
    +getTotalAmount(): double
}

' Define the User class
class User {
    -userId: String
    -userType: UserType
    -membershipDuration: int
    +getDiscount(): Discount
}

' Define the UserType enumeration
enum UserType {
    EMPLOYEE
    AFFILIATE
    CUSTOMER
}

' Define the Product class
class Product {
    -productId: String
    -productType: ProductType
    -price: double
}

' Define the ProductType enumeration
enum ProductType {
    CLOTHING
    ELECTRONICS
    FURNITURE
    GROCERIES
    HEALTH_AND_BEAUTY
    BABY_PRODUCTS
}

' Relationships
Discount <|.. PercentageDiscount
Discount <|.. AmountBasedDiscount
BillCalculator --> Discount : uses
User --> Discount : has
Bill "1" *-- "*" Product : contains
UserType : EMPLOYEE
UserType : AFFILIATE
UserType : CUSTOMER
ProductType : CLOTHING
ProductType : ELECTRONICS
ProductType : CLOTHING
ProductType : FURNITURE
ProductType : HEALTH_AND_BEAUTY
ProductType : BABY_PRODUCTS

@enduml
